tests/toy/neg/001427_mutation.toylang
program a = { var a : if int; } .
